@@ -1,0 +1,24 @@
+# Fvwm Vector Buttons Collection 4.
+# All possible 10 buttons are used.
+# Buttons left to right are numbered 1 3 5 7 9 0 8 6 4 2
+DestroyDecor DecorDemo
+AddToDecor   DecorDemo
++ TitleStyle Height 30
++ TitleStyle (Solid gray -- Flat)
++ ButtonStyle Reset
+# From: Jeff Walker <jwalker@matchlogic.com>
+# This demonstrates the trick of using AddButtonStyle to build up an image
+# arrow pointing up at a bar across the top
++ ButtonStyle 1 15 10x5@1 90x5@1 90x20@0 50x20@0 50x25@0 80x55@0 60x55@0 60x90@0 40x90@0 40x55@1 20x55@1 50x25@1 50x20@0 10x20@0 10x5@1 -- Flat
++ AddButtonStyle 1 ActiveDown 15 10x5@0 90x5@0 90x20@1 50x20@1 50x25@1 80x55@1 60x55@1 60x90@1 40x90@1 40x55@0 20x55@0 50x25@0 50x20@1 10x20@1 10x5@0 -- Flat
+# arrow pointing down at a bar across the bottom
++ ButtonStyle 3 16 10x5@1 90x5@1 90x20@0 40x20@0 40x26@0 60x26@1 60x60@0 80x60@0 50x90@0 20x60@1 40x60@1 40x26@1 60x26@1 60x20@0 10x20@0 10x5@1 -- Flat
++ AddButtonStyle 3 ActiveDown 16 10x5@0 90x5@0 90x20@1 40x20@1 40x26@1 60x26@0 60x60@1 80x60@1 50x90@1 20x60@0 40x60@0 40x26@0 60x26@0 60x20@1 10x20@1 10x5@0 -- Flat
++ ButtonStyle 5 2 0x0@0 0x100@0
++ ButtonStyle 7 2 0x0@0 0x100@0
++ ButtonStyle 9 2 0x0@0 0x100@0
++ ButtonStyle 0 2 0x0@0 0x100@0
++ ButtonStyle 8 2 0x0@0 0x100@0
++ ButtonStyle 6 2 0x0@0 0x100@0
++ ButtonStyle 4 2 0x0@0 0x100@0
++ ButtonStyle 2 2 0x0@0 0x100@0
