@@ -39,18 +39,29 @@
 
 DestroyFunc button_demo
 AddToFunc   button_demo
-+ I 10_buttons
-+ I Style "button_demo_style*" UseDecor DecorDemo, MWMBorder, HandleWidth 10
-+ I Style "button_demo_style*" HilightFore white, HilightBack grey
+ + I 10_buttons
+ + I Style "button_demo_style*" UseDecor DecorDemo, MWMBorder, HandleWidth 10
+ + I Style "button_demo_style*" HilightFore white, HilightBack grey
 # Setting the height to either zero or 1 seemed to have the same effect.
-+ I Exec xv -name button_demo_style -geometry 300x1
+ + I Exec xv -name button_demo_style -geometry 300x1
 
 # -- Start of 10 button layout --
 DestroyFunc 10_buttons
 AddToFunc   10_buttons
-+ I Style "button_demo_style*" NoButton 1, NoButton 2, NoButton 3
-+ I Style "button_demo_style*" NoButton 4, NoButton 5, NoButton 6
-+ I Style "button_demo_style*" NoButton 7, NoButton 8, NoButton 9, NoButton 10
-+ I Style "button_demo_style*" Button 1, Button 2, Button 3
-+ I Style "button_demo_style*" Button 4, Button 5, Button 6
-+ I Style "button_demo_style*" Button 7, Button 8, Button 9, Button 10
+ + I Style "button_demo_style*" NoButton 1, NoButton 2, NoButton 3
+ + I Style "button_demo_style*" NoButton 4, NoButton 5, NoButton 6
+ + I Style "button_demo_style*" NoButton 7, NoButton 8, NoButton 9, NoButton 10
+ + I Style "button_demo_style*" Button 1, Button 2, Button 3
+ + I Style "button_demo_style*" Button 4, Button 5, Button 6
+ + I Style "button_demo_style*" Button 7, Button 8, Button 9, Button 10
+# I find if I don't bind something to the button, it doesn't appear (dje):
+ + I Mouse 3 0 M Nop
+ + I Mouse 3 1 M Nop
+ + I Mouse 3 2 M Nop
+ + I Mouse 3 3 M Nop
+ + I Mouse 3 4 M Nop
+ + I Mouse 3 5 M Nop
+ + I Mouse 3 6 M Nop
+ + I Mouse 3 7 M Nop
+ + I Mouse 3 8 M Nop
+ + I Mouse 3 9 M Nop
