@@ -18,14 +18,16 @@
     <table>
       <tr><td>
 	  <a href="DecorDemo1.fvwmrc"><img src="DecorDemo1.gif"
-	      alt="Collection 1" align=left></a>
-	</td></tr>
+	      alt="Collection 1" align=left></a></td></tr>
       <tr><td>
 	  <a href="DecorDemo2.fvwmrc"><img src="DecorDemo2.gif"
 	      alt="Collection 2" align=left></a></td></tr>
       <tr><td>
 	  <a href="DecorDemo3.fvwmrc"><img src="DecorDemo3.gif"
 	      alt="Collection 3" align=left></a></td></tr>
+      <tr><td>
+	  <a href="DecorDemo4.fvwmrc"><img src="DecorDemo4.gif"
+	      alt="Collection 4" align=left></a></td></tr>
     </table>
     If you have a vector button that you would like to contribute
     you can mail it to fvwm-workers@fvwm.org.
@@ -35,6 +37,6 @@
       buttons.  You can get it
       <A HREF="http://www.xs4all.nl/~josvanr/eps2vector.pl">HERE</A>.
     <hr>
-    Created: November 22, 1999 ----- Last Updated: February 5, 2000.
+    Created: November 22, 1999 ----- Last Updated: January 20, 2001.
   </body>
 </html>
